--- a/style.scss
+++ b/style.scss
@@ -20,3 +20,9 @@ mat-form-field {
     }
   }
 }
+
+.mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float
+            .mat-form-field-label {
+            transform: translateY(-14px) scale(0.75) perspective(100px)
+              translateZ(0.001px) !important;
+          }
